--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     }
     // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
     compile group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.2.3.RELEASE'
-    
-    
+    // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
+    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.3.0'
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.4.RELEASE'
+
 }
