--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,35 @@ spring:
 kafka:
   consumer:
     stock:
-      consumerBootstrapServers: localhost:9092
       topic: stock-data
+      consumerBootstrapServers: localhost:9092
       autoOffsetReset: earliest
       maxPollRecords: 1000
-      keyDeserializer: com.apache.kafka.common.serialization.SpringDeserializer
-      valueDeserializer: com.apache.kafka.common.serialization.SpringDeserializer
+      keyDeserializer: com.apache.kafka.common.serialization.StringDeserializer
+      valueDeserializer: com.apache.kafka.common.serialization.StringDeserializer
       groupId: test-consumer-1
+
+  producer:
+    stock:
+      bootstrapServers: localhost:9092
+      ack: 1
+      retriesConfig: 3
+      batchSize: 0
+      lingerms: 2
+      maxInflightConnections: 1
+      topic: stock-data
+      keySerializer: com.apache.kafka.common.serialization.StringSerializer
+      valueSerializer: com.apache.kafka.common.serialization.StringSerializer
+
+  datasoure:
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      autoCommit: false
+      driverClassName: org.postgres.Driver
+      jdbcUrl: "jdbc:postgresql://localhost:5432/SupplyChainData"
+      username: postgres
+      maximumPoolSize: 10
+      connectionTimeout: 60000
+
+
 
