--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'application'
+apply plugin: 'groovy'
 
 group = 'bbejeck'
 version = '1.0-SNAPSHOT'
@@ -23,22 +24,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.6.1'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.7.1'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.7.1'
-    compile group: 'com.google.guava', name: 'guava', version:'19.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.1'
-    compile group: 'com.101tec', name:'zkclient', version:'0.7'
-    compile group: 'com.yammer.metrics', name:'metrics-core', version:'2.2.0'
-    compile group: 'com.twitter', name:'hbc-core', version:'2.2.0'
-    compile group: 'de.julielab', name: 'aliasi-lingpipe', version:'4.1.0'
-    compile group: 'org.apache.commons', name:'commons-lang3', version:'3.4'
-    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '0.10.1.0'
-    compile group: 'org.apache.kafka', name: 'kafka-streams', version: '0.10.1.0'
-    compile group: 'org.rocksdb', name: 'rocksdbjni', version: '4.1.0'
-    testCompile group: 'junit', name: 'junit', version:'4.11'
-    compile group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.8.0'
-    // https://mvnrepository.com/artifact/com.pagerduty/kafka-consumer
-    compile group: 'com.pagerduty', name: 'kafka-consumer_2.10', version: '0.4.1'
-    // https://mvnrepository.com/artifact/org.apache.kafka/kafka
-    compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.1.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
     compile('org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE') {
         exclude module: 'spring-boot-starter-logging'
@@ -49,5 +35,8 @@ dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.3.0'
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.4.RELEASE'
-
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1200-jdbc41'
+    // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.0-alpha-4', ext: 'pom'
 }
