--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,10 @@ dependencies {
     compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1200-jdbc41'
     // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.0-alpha-4', ext: 'pom'
+    // https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core
+    compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0-rc3'
+    // https://mvnrepository.com/artifact/io.dropwizard/dropwizard-metrics-graphite
+    compile group: 'io.dropwizard', name: 'dropwizard-metrics-graphite', version: '1.3.8'
+    // https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-annotation
+    compile group: 'io.dropwizard.metrics', name: 'metrics-annotation', version: '3.1.0'
 }
